2008-08-22 Mathieu Blondel <mblondel@svn.gnome.org>

    * test/test_preferences.rb: Added a test for the save! method.

2008-08-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/preferences.rb: Split Preferences into Preferences and
    PreferencesBase; support edge cases in some functions.
    * test/test_preferences.rb: Added unit test.
    * test/data/config.yaml: Data used by the unit test.

2008-08-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * test/test_utils.rb: Unit test for the utils.

2008-08-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Update the search entry font when the
    dictionary menu is changed rather than when the search entry is activated.

2008-08-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/print.rb: Slice the word in the header if it's too long.
    This can happen when one enters a long sentence to translate with Google
    Translate.

2008-08-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/google_translate.rb: Fixed bug which made the
    source return no results. This was due to a change in the HTML structure of
    the results in translate.google.com.
    * test/test_google_translate.rb: Added a unit-test.
    * README: Added a note on how to run tests.

2008-08-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Created Source::Base::load_plugins class
    method.
    * lib/fantasdic.rb: Use it!

2008-08-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/print.rb: Work around probable Ruby-GNOME2 bug causing
    segmentation fault.

2008-08-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Use default stock "NEW" instead of "Look
    up". The button simply empty the search entry so "Look up" was misleading.

2008-08-19 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Use font name in the search entry but don't
    alter the size.