@@ -104,3 +104,5 @@ module Source
 
 end
 end
+
+Fantasdic::Source::Base.register_source(Fantasdic::Source::GoogleTranslate)
